tests/compile/switch-1.c
/**
RUN: %scc %s 2>&1 | filecheck %s
*/

int
main()
{
  // CHECK: error: case outside of switch statement
  case 'a':
}